--- a/scss/style.scss
+++ b/scss/style.scss
@@ -766,3 +766,195 @@ body {
         }
     }
 }
+
+/*================================================*/
+
+.reviews {
+    padding-block-start: 306px;
+    background: #081130;
+    overflow: hidden;
+
+    &__title {
+        margin-block-end: 80px;
+        text-align: center;
+        color: #fff;
+    }
+
+    &__slider {
+        
+    }
+}
+.title {
+}
+.slider-reviews {
+    padding-block-end: 310px;
+    &__wrapper {
+        position: relative;
+    }
+
+    &__slide {
+    }
+
+    &__buttons {
+        display: flex;
+        justify-content: center;
+        gap: 24px;
+        margin-block-start: 70px;
+    }
+
+
+    
+}
+.swiper-container {
+}
+.swiper-wrapper {
+}
+.slide-reviews {
+    
+    
+    &__container {
+        padding-inline: 143px;
+        padding-block: 70px;
+        
+
+        background: #fff;
+        border: 2px solid rgb(226, 234, 242);
+        border-radius: 5px;
+        box-shadow: 2px 8px 16px 0px rgba(194, 198, 208, 0.06);
+
+        display: grid;
+        grid-template-columns: 1fr auto;
+        gap: 54px;
+
+        //
+
+       // max-width: 1180px;
+       // margin-inline: auto;
+        
+    }
+
+    &__text {
+    }
+
+    &__photo {
+    }
+}
+.swiper-slide {
+}
+.text-review {
+    position: relative;
+        &::before {
+            position: absolute;
+            content: '';
+            width: 40px;
+            height: 27.47px;
+            left: 0;
+            top: 6px;
+            background: url('../img/quotes.png') 100% no-repeat;
+        }
+
+    &__title {
+        padding-block-start: 64px;
+        padding-block-end: 24px;
+
+        font-size: 30px;
+        font-weight: 500;
+        line-height: 1.43;
+    }
+
+    &__text {
+        padding-inline-end: 30px;
+        margin-block-end: 24px;
+        font-size: 15px;
+        line-height: 1.7;
+    }
+
+    &__link {
+        font-size: 14px;
+        line-height: 1.5;
+        color: #4A94FF;
+        margin: 1px 0px;
+        border-bottom: 1px dashed #4A94FF;;
+    }
+}
+.photo-review {
+    text-align: center;
+
+    &__image {
+        position: relative;
+        width: 380px;
+        height: 380px;
+        border-radius: 50%;
+        overflow: hidden;
+        margin-block-end: 30px;
+    }
+
+    &__author {
+        font-size: 21px;
+        font-weight: 500;
+        line-height: 1.43;
+        margin-block-end: 6px;
+    }
+
+    &__city {
+        font-size: 16px;
+        line-height: 1.7;
+        color: #A6AEB6;
+    }
+}
+.slider-reviews-button-prev,
+.slider-reviews-button-next{
+    cursor: pointer;
+    width: 66px;
+    height: 66px;
+    border-radius: 50%;
+    background-color: #FED84C;
+    position: relative;
+    &::before {
+        position: absolute;
+        content: '';
+        width: 100%;
+        height: 100%;
+        top: 0;
+        
+        background: url('/img/arrow.png') center no-repeat;
+        
+    }
+
+    &:hover {
+        background-color: #f8c819;
+    }
+}
+
+.slider-reviews-button-prev {
+    &::before {
+        left: -3px;
+        transform: rotate(180deg);
+    }
+
+    
+    
+}
+.slider-reviews-button-next {
+    &::before {
+        left: 3px;
+        
+    }
+}
+
+//
+
+.swiper-slide-active {
+   
+    opacity: 1;
+}
+
+.swiper-slide-prev {
+    opacity: 0.5;
+    scale: 0.8;
+}
+
+.swiper-slide-next {
+    opacity: 0.5;
+    scale: 0.8;
+}
