--- a/css/style.css
+++ b/css/style.css
@@ -26,6 +26,14 @@ ul li {
   list-style: none;
 }
 
+input, button, textarea {
+  font-family: inherit;
+}
+
+:focus, :active {
+  outline: none;
+}
+
 button {
   background-color: transparent;
 }
@@ -983,4 +991,78 @@ body {
     flex: 1 1 100%;
     padding-block: 40%;
   }
+}
+
+/*================================================*/
+.footer__title {
+  font-size: 36px;
+  font-weight: 700;
+  line-height: 1.33;
+  text-align: center;
+  margin-block-end: 12px;
+}
+.footer__text {
+  text-align: center;
+  font-size: 21px;
+  line-height: 1.43;
+  letter-spacing: -0.2px;
+  margin-block-end: 36px;
+}
+.form-order {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 25px 20px;
+}
+.form-order__tel-inner {
+  flex: 1 1 50%;
+  max-width: 380px;
+  position: relative;
+}
+.form-order__tel-inner svg {
+  position: absolute;
+  content: "";
+  width: 14px;
+  height: 14px;
+  top: 36px;
+  left: 31.5px;
+  background: url(/img/phone-input.svg) center/cover no-repeat;
+}
+.form-order__phone {
+  width: 100%;
+  height: 86px;
+  font-size: 18px;
+  border-radius: 8px;
+  background: #F2F6FA;
+  padding-inline-start: 58px;
+  padding-inline-end: 30px;
+}
+.form-order__phone::-moz-placeholder {
+  color: #7E868E;
+  font-size: 15px;
+  line-height: 1.6;
+}
+.form-order__phone::placeholder {
+  color: #7E868E;
+  font-size: 15px;
+  line-height: 1.6;
+}
+.form-order__phone:hover + svg path {
+  fill: #2E363E;
+}
+.form-order__phone:hover::-moz-placeholder {
+  color: #2E363E;
+}
+.form-order__phone:hover::placeholder {
+  color: #2E363E;
+}
+.form-order__phone:focus {
+  border: 1px solid #FED84C;
+}
+.form-order__phone:focus + svg path {
+  fill: #2E363E;
+}
+.form-order__button {
+  flex: 1 1 50%;
+  max-width: 380px;
 }
