--- a/css/style.css
+++ b/css/style.css
@@ -994,6 +994,32 @@ body {
 }
 
 /*================================================*/
+.footer {
+  background: #081130;
+  padding-block-start: 300px;
+  padding-block-end: 80px;
+  position: relative;
+}
+.footer::before {
+  position: absolute;
+  content: "";
+  width: 100%;
+  height: 330px;
+  left: 0;
+  top: 0;
+  background: url("/img/01 1.png") 0 0/cover no-repeat;
+}
+.footer__container {
+  background: #fff;
+  padding-inline: 150px;
+  padding-block: 70px;
+  border-radius: 8px;
+}
+@media (max-width: 1200px) {
+  .footer__container {
+    padding-inline: 20px;
+  }
+}
 .footer__title {
   font-size: 36px;
   font-weight: 700;
@@ -1008,6 +1034,24 @@ body {
   letter-spacing: -0.2px;
   margin-block-end: 36px;
 }
+.footer__links {
+  padding-block: 80px;
+  margin-inline: auto;
+  display: flex;
+  max-width: 800px;
+  flex-wrap: wrap;
+  gap: 22px 43px;
+  color: #7E868E;
+  justify-content: center;
+}
+.footer__link {
+  font-size: 12px;
+  line-height: 1.5;
+}
+.footer__link:hover {
+  text-decoration: underline;
+}
+
 .form-order {
   display: flex;
   flex-wrap: wrap;
@@ -1065,4 +1109,61 @@ body {
 .form-order__button {
   flex: 1 1 50%;
   max-width: 380px;
+}
+.form-order__agreement {
+  flex: 1 1 auto;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 7px;
+  color: #7E868E;
+  font-size: 11px;
+  line-height: 1.3;
+  padding-inline-start: 19px;
+  padding-block: 1px;
+  position: relative;
+}
+.form-order__agreement input {
+  display: none;
+}
+.form-order__agreement span {
+  flex: 0 0 12px;
+  height: 12px;
+  border-radius: 2px;
+  background: #4A94FF;
+}
+.form-order__agreement:hover span {
+  background: #65a5fd;
+}
+.form-order__agreement-link {
+  display: inline;
+  text-decoration: underline;
+}
+.form-order__agreement-link:hover {
+  color: #2E363E;
+}
+
+.--checked span {
+  background: #4A94FF;
+  position: relative;
+}
+.--checked span::before {
+  position: absolute;
+  content: "";
+  width: 1px;
+  height: 3px;
+  top: 5px;
+  left: 3.5px;
+  background: #fff;
+  transform: rotate(-45deg);
+}
+.--checked span::after {
+  position: absolute;
+  content: "";
+  width: 1px;
+  height: 6px;
+  top: 2px;
+  left: 6.5px;
+  background: #fff;
+  transform: rotate(45deg);
 }
