--- a/css/style.css
+++ b/css/style.css
@@ -694,7 +694,7 @@ body {
 }
 @media (max-width: 1210px) {
   .about-confectionery {
-    margin-inline-start: 0px;
+    margin-inline-start: -15;
   }
 }
 .about-confectionery__name {
@@ -1010,8 +1010,9 @@ body {
   background: url("/img/01 1.png") 0 0/cover no-repeat;
 }
 .footer__container {
+  max-width: 1180px;
   background: #fff;
-  padding-inline: 150px;
+  padding-inline: 99px;
   padding-block: 70px;
   border-radius: 8px;
 }
@@ -1032,7 +1033,7 @@ body {
   font-size: 21px;
   line-height: 1.43;
   letter-spacing: -0.2px;
-  margin-block-end: 36px;
+  margin-block-end: 38px;
 }
 .footer__links {
   padding-block: 80px;
@@ -1056,7 +1057,7 @@ body {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
-  gap: 25px 20px;
+  gap: 20px;
 }
 .form-order__tel-inner {
   flex: 1 1 50%;
@@ -1110,62 +1111,133 @@ body {
   flex: 1 1 50%;
   max-width: 380px;
 }
-.form-order__agreement {
-  display: grid;
-  grid-template-columns: auto auto;
-  gap: 5px;
+
+/*   &__agreement {
+
+        display: grid;
+        grid-template-columns: auto auto;
+        gap: 5px;
+        @media(max-width: 775px){
+            grid-template-columns: 1fr;
+        }
+    }
+
+    &__agreement-label {
+       display: grid;
+       grid-template-columns: 12px 1fr;
+       gap: 7px;
+       align-items: center;
+        input {
+            display: none;
+        }
+
+        span {
+            flex: 0 0 12px;
+            height: 12px;
+            border-radius: 2px;
+            background: #4A94FF;
+        }
+
+        &:hover {
+            span {
+                background: #65a5fd;
+            }
+
+        }
+
+    }
+    &__agreement-text {
+
+
+
+    }
+    &__agreement-link {
+
+        text-decoration: underline;
+        &:hover {
+            color: #2E363E;
+        }
+    }
 }
-@media (max-width: 775px) {
-  .form-order__agreement {
-    grid-template-columns: 1fr;
-  }
+
+.--checked {
+    span {
+        background: #4A94FF;
+        position: relative;
+        &::before {
+            position: absolute;
+            content: '';
+            width: 1px;
+            height: 3px;
+            top: 5px;
+            left: 3.5px;
+            background: #fff;
+            transform: rotate(-45deg);
+        }
+        &::after {
+            position: absolute;
+            content: '';
+            width: 1px;
+            height: 6px;
+            top: 2px;
+            left: 6.5px;
+            background: #fff;
+            transform: rotate(45deg);
+        }
+    }
+}
+*/
+.form-order__agreement {
+  text-align: center;
 }
 .form-order__agreement-label {
-  display: grid;
-  grid-template-columns: 12px 1fr;
-  gap: 7px;
-  align-items: center;
+  padding-left: 19px;
+  font-size: 11px;
+  line-height: 1.3;
+  position: relative;
 }
 .form-order__agreement-label input {
   display: none;
 }
-.form-order__agreement-label span {
-  flex: 0 0 12px;
+.form-order__agreement-label::before {
+  position: absolute;
+  content: "";
+  top: 1px;
+  left: 1px;
+  width: 12px;
   height: 12px;
   border-radius: 2px;
   background: #4A94FF;
 }
-.form-order__agreement-label:hover span {
-  background: #65a5fd;
+.form-order__agreement-label:hover::before {
+  background: #80b3fa;
 }
 .form-order__agreement-link {
   text-decoration: underline;
+  font-size: 11px;
+  line-height: 1.3;
 }
 .form-order__agreement-link:hover {
   color: #2E363E;
 }
 
-.--checked span {
+.--checked::before {
+  position: absolute;
+  content: "";
+  top: 1px;
+  left: 1px;
+  width: 12px;
+  height: 12px;
+  border-radius: 2px;
   background: #4A94FF;
-  position: relative;
 }
-.--checked span::before {
+.--checked::after {
   position: absolute;
   content: "";
-  width: 1px;
-  height: 3px;
-  top: 5px;
-  left: 3.5px;
-  background: #fff;
-  transform: rotate(-45deg);
-}
-.--checked span::after {
-  position: absolute;
-  content: "";
-  width: 1px;
-  height: 6px;
-  top: 2px;
-  left: 6.5px;
-  background: #fff;
-  transform: rotate(45deg);
+  top: 1px;
+  left: 1px;
+  width: 12px;
+  height: 12px;
+  border-radius: 2px;
+  background: url("/img/check.png") center no-repeat;
 }
