--- a/scss/style.scss
+++ b/scss/style.scss
@@ -725,7 +725,7 @@ body {
     margin-inline-start: -85px;
 
     @media(max-width: 1210px){
-        margin-inline-start: 0px;
+        margin-inline-start: -15;
     }
     &__name {
         display: inline-block;
@@ -1074,8 +1074,9 @@ body {
         background: url("/img/01\ 1.png") 0 0/cover no-repeat;
     }
     &__container {
+        max-width: 1180px;
         background: #fff;
-        padding-inline: 150px;
+        padding-inline: 99px;
         padding-block: 70px;
         border-radius: 8px;
 
@@ -1100,7 +1101,7 @@ body {
         font-size: 21px;
         line-height: 1.43;
         letter-spacing: -0.2px;
-        margin-block-end: 36px;
+        margin-block-end: 38px;
     }
 
     &__form {
@@ -1132,7 +1133,7 @@ body {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-    gap: 25px 20px;
+    gap: 20px;
 
     &__tel-inner {
         flex: 1 1 50%;
@@ -1193,8 +1194,8 @@ body {
         flex: 1 1 50%;
         max-width: 380px;
     }
-
-    &__agreement {
+}
+ /*   &__agreement {
         
         display: grid;
         grid-template-columns: auto auto;
@@ -1267,4 +1268,77 @@ body {
             transform: rotate(45deg);
         }
     }
+}
+*/
+
+.form-order {
+
+    &__agreement {
+        text-align: center;
+    }
+
+    &__agreement-label {
+        
+        
+        padding-left: 19px;
+        font-size: 11px;
+        line-height: 1.3;
+        input {
+         display: none;   
+        }
+        position: relative;
+        &::before {
+            position: absolute;
+            content: '';
+            top: 1px;
+            left: 1px;
+            width: 12px;
+            height: 12px;
+            border-radius: 2px;
+            background: #4A94FF;
+        }
+
+        &:hover {
+            &::before {
+                
+                background: #80b3fa;
+            }
+            
+        }
+    }
+
+    &__agreement-link {
+        text-decoration: underline;
+        font-size: 11px;
+        line-height: 1.3;
+        &:hover {
+            color: #2E363E;
+        }
+    }
+}
+.--checked {
+    &::before {
+        position: absolute;
+        content: '';
+        top: 1px;
+        left: 1px;
+        width: 12px;
+        height: 12px;
+        border-radius: 2px;
+        background: #4A94FF;
+    }
+    &::after {
+        position: absolute;
+        content: '';
+        top: 1px;
+        left: 1px;
+        width: 12px;
+        height: 12px;
+        border-radius: 2px;
+        background: url("/img/check.png") center no-repeat;
+    }
+
+
+}
+.input-checkbox {
 }
